--- a/portifolio/package.json
+++ b/portifolio/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
