--- a/portifolio/package.json
+++ b/portifolio/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "css-loader": "^6.8.1",
     "dotenv": "^16.1.3",
+    "i18next": "^22.5.0",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
