--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,9 @@
-node_modules
-package-lock.json
+# dependencies
+/node_modules
+/package-lock.json
+
+# build
+/dist
+
+# environment variables
+/.env
