--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "6.1.8"
+    "mongoose": "6.1.8",
+    "openai": "^3.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
